--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./src/pages/index.html"
     <title>Document</title>
 </head>
 <body>
+    <a href="./src/pages/index.html"> homework path </a>
 </body>
 </html>
 <a href="path_to_your_file.html">Link Text</a>
